fix(segmented-button): adding fixes for line-height and text-align  on parent causing layout shift.

--- a/packages/web-components/src/components/rux-segmented-button/rux-segmented-button.scss
+++ b/packages/web-components/src/components/rux-segmented-button/rux-segmented-button.scss
@@ -2,6 +2,8 @@
     display: block;
     box-sizing: border-box;
     font-size: var(--font-size-base); //fixes issue where parent element with larger font-size causes layout shift.
+    line-height: var(--line-height-base); //fixes issue where parent element with larger line-height causes layout shift.
+    text-align: left;
 }
 
 :host([disabled]) {
